benerin beberapa bugs dan heronya berubah jadi versi 2

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
     </nav>
     <body>
-        <section class="hero">
-            <!-- <img src="images/hero.png" alt="" /> -->
-            <div class="hero-content">
+        <!-- <section class="hero"> -->
+        <!-- <img src="images/hero.png" alt="" /> -->
+        <!-- <div class="hero-content">
                 <h2>Tulisan</h2>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -49,6 +49,26 @@
                     Nihil?
                 </p>
                 <button>Daftar Sekarang!</button>
+            </div> -->
+        <!-- </section> -->
+        <section class="hero2">
+            <div class="hero-content2">
+                <div class="left-content">
+                    <h2>Tulisan</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Harum aut quia qui molestiae odio, modi id atque
+                        quod optio! Nihil?
+                    </p>
+                    <button>Daftar Sekarang!</button>
+                </div>
+                <div class="right-content">
+                    <img
+                        class="juju-image"
+                        src="images/Juju intro.png"
+                        alt="Hai Juju"
+                    />
+                </div>
             </div>
         </section>
         <section class="about-us">
@@ -75,6 +95,7 @@
                         <h1>Visi</h1>
                     </div>
                 </div>
+                <div class="gap-between-lower"></div>
                 <div class="right">
                     <p>
                         Misi kami adalah membantu siswa-siswi SMA untuk
